<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">


    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_below="@+id/relLayout0"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/tabian_consulting_sales_chart"
        android:src="@drawable/profit_chart" />

    <RelativeLayout
        android:id="@+id/relLayout0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_marginTop="20dp"
        android:padding="20dp">

        <!-- This weeks initiatives -->
        <RelativeLayout
            android:id="@+id/relLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/icon_initiatives"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_initiatives" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/icon_initiatives"
                android:text="@string/this_week_s_initiatives"
                android:textColor="@color/Black"
                android:textSize="15sp" />

        </RelativeLayout>


        <!-- Scheduling -->
        <RelativeLayout
            android:id="@+id/relLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/relLayout1"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/icon_scheduling"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_schedule" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/icon_scheduling"
                android:text="@string/employee_schedule"
                android:textColor="@color/Black"
                android:textSize="15sp" />

        </RelativeLayout>

        <!-- Culture -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/relLayout2"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/icon_culture"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_culture" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/icon_culture"
                android:text="@string/company_culture"
                android:textColor="@color/Black"
                android:textSize="15sp" />

        </RelativeLayout>

    </RelativeLayout>


    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/employee_dashboard"
        android:textColor="@color/Black"
        android:textSize="25sp" />


</RelativeLayout>

























